# yahtzee

./: Cargo.toml  Rocket.toml
src/: lib.rs  main.rs  models.rs
static/: error.css
templates/: error.html.hbs  index.html.hbs  post.html.hbs  scorecard.html.hbs
